--- a/style.css
+++ b/style.css
@@ -10,11 +10,15 @@ h1 {
 }
 
 #second {
-    border : 2px red solid
+    border : 2px red solid;
     padding : 100px 40px;
     margin: 150px 0px;
     display: inline-block;
+    width: 500px;
 
+}
+.big {
+    font-size: 64px;
 }
 
 .container {
